# Project_CHORES

./: README.md
kongji-patji/: .gitignore  README.md  main.cpp
kongji-patji/.github/ISSUE_TEMPLATE/: feature.md
kongji-patji/cow/: README.md
kongji-patji/cow/arduino/stepper_motor_control_with_cnc_shield/: stepper_motor_control_with_cnc_shield.ino
kongji-patji/cow/raspberrypi/ros2_ws/src/jdamr200_cartographer/: CMakeLists.txt  package.xml  setup_unused.py
kongji-patji/cow/raspberrypi/ros2_ws/src/jdamr200_cartographer/config/: jdamr200_lidar.lua
kongji-patji/cow/raspberrypi/ros2_ws/src/jdamr200_cartographer/launch/: astar_planner.launch.py  cartographer.launch.py  occupancy_grid.launch.py
kongji-patji/cow/raspberrypi/ros2_ws/src/jdamr200_cartographer/maps/: test_map.yaml
kongji-patji/cow/raspberrypi/ros2_ws/src/jdamr200_cartographer/planner/: astar_path_planner.py  goal_sender.py
kongji-patji/cow/raspberrypi/ros2_ws/src/keyboard_serial_control/: CMakeLists.txt  package.xml
kongji-patji/cow/raspberrypi/ros2_ws/src/keyboard_serial_control/src/: keyboard_command_publisher.cpp  serial_command_sender.cpp
kongji-patji/cow/raspberrypi/ros2_ws/src/stereo_litter_direct_node/: CMakeLists.txt  package.xml
kongji-patji/cow/raspberrypi/ros2_ws/src/stereo_litter_direct_node/src/: stereo_litter_direct_node.cpp
kongji-patji/cow/stm32/: .cproject  .mxproject  .project  stm32.ioc
kongji-patji/cow/stm32/Core/Inc/: delay_us.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
kongji-patji/cow/stm32/Core/Src/: SCSerial.cpp  delay_us.c  main.cpp  servo.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
kongji-patji/cow/stm32/Debug/: makefile  objects.list  sources.mk  stm32.list
kongji-patji/cow_HW/: cow.urdf.xacro  v1_chores.stp
kongji-patji/cow_HW/for_urdf_description/: CMakeLists.txt  package.xml
kongji-patji/cow_HW/for_urdf_description/launch/: controller.yaml
kongji-patji/cow_HW/for_urdf_description/meshes/: CONNECTION, DC MOTOR, JGB37-520.stl  COUPLING BRACKET, GEARED BODY TO DC MOTOR, JGB37-520.stl  DC MOTOR, JGB37-520.stl  GEARED BODY, MOTOR, JGB37-520.stl  JGB37-520.stl  MOTOR SHAFT, JGB37-520.stl  PLASTIC COVER, DC MOTOR, JGB37-520.stl  SHAFT COUPLER, JGB37-520.stl  base_link.stl  frame1_1.stl  frame2_1.stl  frame3_1.stl  frame4_1.stl  frame5_1.stl  frame6_1.stl  frame7_1.stl  frame8_1.stl  pan cross head_am_B18.6.7M - M2 x 0.4 x 25 Type I Cross Recessed PHMS --25N.stl  pillar1_1.stl  pillar2_1.stl  pillar3_1.stl  pillar4_1.stl  pillar_U1_1.stl  pillar_U2_1.stl  pillar_U3_1.stl  pillar_U4_1.stl  s_wheel1_1.stl  s_wheel2_1.stl  s_wheel3_1.stl  s_wheel4_1.stl  s_wheel_part1_1.stl  s_wheel_part2_1.stl  s_wheel_part3_1.stl  s_wheel_part4_1.stl  wheel1.stl  wheel2.stl  wheel_part1_1.stl  wheel_part2_1.stl
kongji-patji/cow_HW/for_urdf_description/urdf/: for_urdf.gazebo  for_urdf.trans  for_urdf.xacro  materials.xacro
kongji-patji/cow_HW/parts/DC motor/jgb37-520/: Description.txt  encoder.step
kongji-patji/cow_HW/parts/Plastic Chain Belt/: Plastic Chain Belt.step
kongji-patji/cow_HW/parts/battery/: 12v_5100mah_battery.3dm
kongji-patji/cow_HW/parts/converter/: dc-dc_converter.3dm
kongji-patji/cow_HW/parts/converter/buck-converter-7.snapshot.4/: LM2596 DC to DC Buck Converter 3 A.SLDASM  LM2596S.sldprt  TrimmerW203.sldprt  lm2596board.sldprt  smbInductor470.sldprt  smd100uF.sldprt  smd220uF.sldprt  smdLED.sldprt  smdResistor102.sldprt  smdResistor331.sldprt  smdS537diode.sldprt  smdceramiccapacitor.sldprt
kongji-patji/cow_HW/parts/servo motor/feetech-fs5109m-servo-1.snapshot.9/: FS5109M_Ensemble servo.STEP  (+1 more)
kongji-patji/cow_HW/parts/wheel_n_motor/: JGB37-520_n_wheel.3dm  JGB37-520_n_wheel.3dmbak
kongji-patji/toad/: README.md
kongji-patji/toad/raspberrypi/ros2_ws/src/desk_pickup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
kongji-patji/toad/raspberrypi/ros2_ws/src/desk_pickup/desk_pickup/: send_joint_serial_sub_node.py  toad_auto_drive_pub.cpp  toad_auto_drive_sub.cpp  toad_sub_serial.cpp
kongji-patji/toad/raspberrypi/ros2_ws/src/desk_pickup/launch/: send_joint_serial.launch.py
kongji-patji/toad/raspberrypi/ros2_ws/src/desk_pickup/msg/: ToadDriveMsg.msg
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/: CMakeLists.txt  package.xml
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/inc/: arm_control_node.hpp
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/inc/serial/: serial.h
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/inc/serial/impl/: unix.h
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/launch/: arm_control_launch.py
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/src/: arm_control_node.cpp  arm_control_pub_node.cpp  serial.cpp
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/src/impl/: unix.cc
kongji-patji/toad/raspberrypi/ros2_ws/src/my_robot_arm_pkg/src/impl/list_ports/: list_ports_linux.cc
kongji-patji/toad/raspberrypi/ros2_ws/src/return_node_pkg/: CMakeLists.txt  package.xml
kongji-patji/toad/raspberrypi/ros2_ws/src/return_node_pkg/src/: motion_mirror_test.cpp
kongji-patji/toad/raspberrypi/ros2_ws/src/toad_auto_drive/: CMakeLists.txt  package.xml
kongji-patji/toad/raspberrypi/ros2_ws/src/toad_auto_drive/msg/: ToadDriveMsg.msg  ToadTeleopMsg.msg
kongji-patji/toad/raspberrypi/ros2_ws/src/toad_auto_drive/src/: toad_auto_drive_pub.cpp  toad_auto_drive_sub.cpp  toad_controller_node.cpp  toad_teleop_pub.cpp  toad_teleop_sub.cpp
kongji-patji/toad/raspberrypi/ros2_ws/src/trash_camera/: CMakeLists.txt  package.xml
kongji-patji/toad/raspberrypi/ros2_ws/src/trash_camera/msg/: TrashInfo.msg
kongji-patji/toad/raspberrypi/ros2_ws/src/trash_camera/trash_camera/: trash_camera_node.py
kongji-patji/toad/raspberrypi/ros2_ws/src/trash_camera/trash_camera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kongji-patji/toad/stm32/: .cproject  .project  STM32_CHORES_2.ioc
kongji-patji/toad/stm32/Debug/: STM32_CHORES_2.list  feetech_servo.list  makefile  objects.list
stm32/: main.c  main_freeRTOS.c  main_sensor_motor.c  main_servo.cpp
(+118 files in other folders)
